# opengl-rubiks-cube

./: .gitignore  CMakeLists.txt  app  build.sh  cube.cpp  main.cpp  notes.md
